--- a/EyeOfOldDriver/app/src/main/res/layout/formula_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/formula_activity.xml
@@ -9,16 +9,17 @@
 
         <com.example.demo.myapplication.CameraView
             android:id="@+id/cameraSurfaceView"
+            android:layout_gravity="center_horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
 
-        <ImageView
-            android:id="@+id/chooseFrame"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/rectangle"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="300px"
-            android:src="@mipmap/frame"/>
+            android:layout_marginTop="200px"
+            ></LinearLayout>
 
         <ImageView
             android:id="@+id/takePicture"
