修改了摄像头部分
摄像头取景框改成随着屏幕大小改变

--- a/EyeOfOldDriver/app/src/main/res/layout/formula_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/formula_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#FFFFFF">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -11,15 +12,14 @@
             android:id="@+id/cameraSurfaceView"
             android:layout_gravity="center_horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"/>
+            android:layout_height="fill_parent" />
 
         <LinearLayout
+            android:id="@+id/rectangleLayout"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rectangle"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="200px"
-            ></LinearLayout>
+            android:layout_gravity="center_horizontal" />
 
         <ImageView
             android:id="@+id/takePicture"
