--- a/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,9 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#FFFFFF"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/eyeImage"
@@ -19,5 +21,14 @@
         android:layout_below="@id/eyeImage"
         android:layout_centerHorizontal="true"
         android:text="@string/formula"/>
+
+    <Button
+        android:id="@+id/sudokuButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/formulaButton"
+        android:layout_marginTop="10pt"
+        android:layout_centerHorizontal="true"
+        android:text="@string/su_do_ku"/>
 
 </RelativeLayout>
