--- a/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
@@ -17,6 +17,12 @@
         />
 
     <Button
+        android:id="@+id/retryButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/retry_button"/>
+
+    <Button
         android:id="@+id/ackButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
