--- a/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
@@ -2,40 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#FFFFFF">
 
-    <ImageView
-        android:id="@+id/testImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/formula"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="70px"
-        />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/answerText"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:gravity="center"
+            android:textSize="50px"
+            android:textColor="#000"
+            />
+
+        <TextView
+            android:id="@+id/formula"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:gravity="center"
+            android:textSize="50px"
+            android:textColor="#000"
+            android:background="#fff"
+            />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/retryButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100px"
+        android:textColor="#fff"
+        android:background="#ff2000"
+        android:textSize="40px"
+        android:layout_marginTop="20dp"
         android:text="@string/retry_button"/>
 
     <Button
         android:id="@+id/ackButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100px"
+        android:textColor="#fff"
+        android:background="#66bb6a"
+        android:textSize="40px"
+        android:layout_marginTop="20dp"
         android:text="@string/ack_button"/>
-
-    <TextView
-        android:id="@+id/answerText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="50px"
-        />
 
 </LinearLayout>
