--- a/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:background="#66bb6a"
         android:textSize="40px"
         android:layout_centerHorizontal="true"
-        android:text="@string/su_do_ku"/>
+        android:text="@string/su_do_ku"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
