--- a/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,18 @@
         android:text="@string/formula"/>
 
     <Button
+        android:id="@+id/equationButton"
+        android:layout_width="match_parent"
+        android:layout_height="100px"
+        android:layout_below="@id/formulaButton"
+        android:layout_marginTop="10pt"
+        android:textColor="#fff"
+        android:background="#66bb6a"
+        android:textSize="40px"
+        android:layout_centerHorizontal="true"
+        android:text="@string/equation"/>
+
+    <Button
         android:id="@+id/sudokuButton"
         android:layout_width="match_parent"
         android:layout_height="100px"
