--- a/EyeOfOldDriver/app/src/main/res/layout/equation_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/equation_activity.xml
@@ -5,38 +5,18 @@
     android:background="#FFFFFF">
 
 
-    <RelativeLayout
-        android:id="@+id/rectangleLayout"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/equationList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:id="@+id/answerText"
-            android:layout_width="match_parent"
-            android:layout_height="100px"
-            android:gravity="center"
-            android:textSize="50px"
-            android:textColor="#000"
-            />
-
-        <TextView
-            android:id="@+id/formula"
-            android:layout_width="match_parent"
-            android:layout_height="100px"
-            android:gravity="center"
-            android:textSize="50px"
-            android:textColor="#000"
-            android:background="#fff"
-            />
-
-    </RelativeLayout>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        />
 
     <LinearLayout
-        android:layout_below="@id/rectangleLayout"
+        android:layout_below="@id/equationList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -46,14 +26,14 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/retryButton"
+            android:id="@+id/addButton"
             android:layout_width="match_parent"
             android:layout_height="100px"
             android:textColor="#fff"
             android:background="#66bb6a"
             android:textSize="40px"
             android:layout_marginTop="20dp"
-            android:text="@string/retry_button"/>
+            android:text="@string/add_button"/>
 
         <Button
             android:id="@+id/ackButton"
@@ -64,6 +44,16 @@
             android:textSize="40px"
             android:layout_marginTop="20dp"
             android:text="@string/ack_button"/>
+
+        <Button
+            android:id="@+id/retryButton"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:textColor="#fff"
+            android:background="#66bb6a"
+            android:textSize="40px"
+            android:layout_marginTop="20dp"
+            android:text="@string/retry_button"/>
 
     </LinearLayout>
 
