完善方程组算法
已经成功计算方程组

--- a/EyeOfOldDriver/app/src/main/res/layout/equation_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/equation_activity.xml
@@ -55,6 +55,15 @@
             android:layout_marginTop="20dp"
             android:text="@string/retry_button"/>
 
+        <TextView
+            android:id="@+id/ans"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:textColor="#000"
+            android:textSize="50px"
+            android:gravity="center"
+            android:layout_marginTop="20dp" />
+
     </LinearLayout>
 
     <LinearLayout
