--- a/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
+++ b/EyeOfOldDriver/app/src/main/res/layout/calculate_activity.xml
@@ -86,4 +86,29 @@
         />
 
 
+
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        >
+
+        <Button
+            android:id="@+id/returnButton"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:textColor="#fff"
+            android:background="#66bb6a"
+            android:textSize="40px"
+            android:layout_marginTop="20dp"
+            android:text="@string/return_button"/>
+
+    </LinearLayout>
+
+
 </RelativeLayout>
